# scripts

./: .gitignore  COPYRIGHT  Makefile  Makefile.am  Makefile.local  README.md  TruSeq3-PE-2+omics.fa  addFileName2header.pl  alignReads.pl  assemble  bamTools.pl  batchBlast.pl  blastparser.pl  calcAssemblyStats.pl  chopper.pl  configure.ac  consolidateJGIdata.pl  contents.list  correctHostKey.pl  countInstances.pl  countTo100.pl  crawler.pl  createFastq.pl  dereplicate.pl  easyRAx.pl  editBashrc.pl  esomCodonMod.pl  extractContigReads.pl  extractSeqs.pl  extractSubSeq.pl  extract_blast_hits.pl  extract_blast_hits2.pl  extract_blast_hits_5best.pl  fetchGeneNames.pl  fileChopper.pl  fragRec.pl  gcSkew.pl  generic_ncbi_dwnld.pl  getBwaMappedReadList.pl  getClassFasta.pl  (+32 more)
AssemblyTools/: README.md  addFileName2header.pl  batchBlast.pl  calcN50.pl  contents.md  limit2Length.pl
BamTools/: README.md  bamTools.pl  coveragePerScaffold.pl  getBwaMappedReadList.pl  mapping.sh
BashScripts/: README.md  assemble.sh  do2all.sh  do2folder.sh  do2list.sh  mapping.sh  qc.sh  ssh2sameFolder.sh
BlastTools/: README.md  basicHF.pl  blastDensityPlot.pl  contents.md  extractSubSeq.pl  fragRec.pl  getSciNames.pl  mapper.pl  postBlast.pl  silvaTaxonAppend.pl  top5.pl
DerepTools/: README.md  README1.md  derep_ClusterMap.pl  dereplicate.pl
GeneralTools/: README.md  contents.md  firefox_already_running.sh
HomologyTools/: README.md  basicHF.pl  contents.md
JGITools/: README.md  binTablesForIMG.pl  consolidateJGIdata.pl  contents.md  extractGenomes.pl  gff2tbl.pl  img_Bin_Classifier.pl  map_project_names.pl  measureCompleteness.pl
MapperTools/: README.md  contents.md  getSciNames.pl  itemize.pl  mapper.pl  silvaTaxonAppend.pl
Modified_Source_Code_Tools/: README.md
NCBITools/: GI_info_XMLParser.pl  README.md  contents.md  extractGenbankMetadata.pl  extractGenomes.pl  getGFF.pl  gff2tbl.pl
PPTTools/: README.md  createPhgDB.sh  derep+alias.pl
RibopickerTools/: README.md  contents.md  silvaTaxonAppend.pl
SeqTools/: README.md  README1.md  addFileName2header.pl  chopper.pl  curateDB.pl  extractSubSeq.pl  findStretchesOfNs.pl  renameHeaders.pl  separateInterleaved.pl  tetramer_freqs_esom.pl  tinySeq2fasta.xslt  tinySeq2table.xslt  toPhylipAndBack.pl
TabTools/: README.md  getSciNames.pl
TinySeqTools/: README.md
VelvetTools/: README.md  extractContigReads.pl
WebTools/: README.md  slideshow.xml
bash-completion/: omics
debian/: README.Debian  changelog  control  copyright  gbp.conf  geo-omics-scripts.bash-completion  links  rules
docs/: Makefile  assemble.txt  binning.txt  bins2fasta.txt  chop-contigs.txt  combine-coverage.txt  conf.py  container.txt  geomics.txt  illumina-reads-processing.txt  index.txt  init.txt  mapping.txt  merge-coverage.txt  omics.txt  prep.txt  (+7 more)
scripts/: COPYRIGHT.tetramer_freqs_esom  CRISPR_spacer_extractor  ESOM_binning_results_parser  ESOM_binning_results_parser.sh  Ebot.Output.Extract.Gi.Title.Rev3  GI_info_XMLParser  Makefile  Makefile.am  Makefile.local  Metabat_to_anvio_parser  Metabat_to_anvio_parser.sh  U2T  VizBin_parser  VizBin_parser.sh  addFileName2header  addInfo2lrn  ani  antiSmash_summary  assemble  assemble.pl  assemblyModules  asv-map-update  aview  bamTools  basicHF  batchBlast  binTablesForIMG  binning  bins2fasta  blast2citation  blastDensityPlot  calcN50  changeClasses  changePGDBattribs  changePGDBattribs.pl  chop-contigs  chopper  clusterDensity  comics  consolidateJGIdata  (+180 more)
(+127 files in other folders)
