bin_SCRIPTS = \
	addFileName2header.pl\
	addInfo2lrn.pl\
	ani.pl\
	antiSmash_summary.sh\
	assemble.pl\
	assemble.sh\
	assemblyModules.sh\
	bamTools.pl\
	basicHF.pl\
	batchBlast.pl\
	binTablesForIMG.pl\
	blastDensityPlot.pl\
	calcN50.pl\
	changeClasses.pl\
	changePGDBattribs.pl\
	chopper.pl\
	clusterDensity.pl\
	consolidateJGIdata.pl\
	contigMetadata.pl\
	countInstances.pl\
	coveragePerBin.pl\
	coveragePerScaffold.pl\
	crawler.pl\
	createFastq.pl\
	createNodes.pl\
	createPhgDB.sh\
	CRISPR_spacer_extractor.pl\
	curateDB.pl\
	derep+alias.pl\
	derep_ClusterMap.pl\
	derep_getReadAbundance.pl\
	dereplicate.pl\
	do2folder.sh\
	do2list.sh\
	Ebot.Output.Extract.Gi.Title.Rev3.py\
	embl2picture.pl\
	esomCodonMod.pl\
	esomTrain.pl\
	esomWrapper.pl\
	expandGFF.pl\
	extract_Blast_Hits_Of_Interest.pl\
	extractContigReads.pl\
	extractEuks.sh\
	extractGenbankMetadata.pl\
	extractGenomes.pl\
	extractSeqs.pl\
	extractSubSeq.pl\
	extractTranslationsFromGbk.pl\
	fileChopper.pl\
	findStretchesOfNs.pl\
	firefox_already_running.sh\
	folderLevelSize.pl\
	fragRec.pl\
	gbk2fna.pl\
	gcSkew.pl\
	genomeCheck.pl\
	genomicFluidity.pl\
	getBwaMappedReadList.pl\
	getClassFasta.pl\
	getCol.pl\
	getFamilyP.pl\
	getFastaFromAccNos.pl\
	getGeneClusters.pl\
	getGFF.pl\
	getGIAnnotation.sh\
	getGiInfo.pl\
	getGI.pl\
	getGISummary.pl\
	getLineage.pl\
	getMasterList.pl\
	getMyContigs.pl\
	getQueryList.pl\
	getRandomData.pl\
	getSciNames.pl\
	gff2fasta.pl\
	gff2neo.pl\
	gff2tbl.pl\
	GI_info_XMLParser.pl\
	git_update.sh\
	iClust.pl\
	img_Bin_Classifier.pl\
	inflate.pl\
	interleave.pl\
	itemize.pl\
	kmerFreq.pl\
	legacy_consolidateJGIdata.pl\
	length+GC.pl\
	limit2Length.pl\
	makeAnnotationFile.pl\
	mapper_getQueryList.pl\
	mapper.pl\
	mapping.sh\
	map_project_names.pl\
	matchQueryNames.pl\
	measureCompleteness.pl\
	mVelvetPipe_paired.sh\
	mVelvetPipe_singles.sh\
	nameClassFiles.pl\
	nsmpReport.pl\
	oasesPaired_pipe.sh\
	parallel_antiSmash.pl\
	parallel_getGenomesFromTaxa.pl\
	parseBlastXML.pl\
	parseFastq.pl\
	parseTinySeqXML.xslt\
	patchBlastLineage.pl\
	plotCoverage.pl\
	postBlast.pl\
	ppt_getGI.pl\
	ppt_getXML.pl\
	qc_no_derep_no_interleave.sh\
	qc_no_derep.sh\
	qc.sh\
	removeBlastSubj.pl\
	removeCommentLines.pl\
	remove_space_from_filenames.sh\
	renameHeaders.pl\
	reverse_complement.pl\
	sangerSeqParser.pl\
	separateInterleaved.pl\
	setup_metapathways.sh\
	silvaTaxonAppend.pl\
	slideshow.xml\
	ssh2sameFolder.sh\
	summarize_antiSmash.pl\
	tally.pl\
	tallyWrap.pl\
	taxonDist.pl\
	test_fragRec.pl\
	tetramer_freqs_esom.pl\
	tinySeq2fasta.xslt\
	tinySeq2table.xslt\
	toMultiGBK.pl\
	top5.pl\
	toPhylipAndBack.pl\
	triage.pl\
	twitterscript.xml\
	U2T.pl\
	uClustHomology.pl\
	usageStats.pl\
	weave.pl
dist_bin_SCRIPTS = $(bin_SCRIPTS)

EXTRA_DIST = Makefile.local

clean-local:
	rm -f *.1

# need a real man page here to include man-making machinery
man_MANS = ani.pl.1

.PHONY: clean-local
